--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
   <footer class="footer text-center text-white bg-dark mt-auto py-3">
     <div class="container">
       <p class="p-0 mt-4">Compyright 2020</p>
-      <p class="p-0 mt-4">Made with By Saifeddin Matoui</p>
+      <p class="p-0 mt-4">Made with 💕 By Saifeddin Matoui</p>
     </div>
   </footer>
 </body>
